SMTv3.2 Release Notes
_____________________

	API Changes:
		-Zone.getTouches() and TouchClient.getTouchesFromZone(Zone) return an array now instead of a collection, the old forms are now called Zone.getTouchCollection() and TouchClient.getTouchCollectionFromZone(Zone)
		-TextZone constructor has a selectable boolean, to specify whether highlighting is done, in addition to blur
		-Touch.getLastPoint() now returns a Point instead of a TuioPoint
	
	API Additions:
		-applet and client variables in Zone now protected
		-parent variable in Zone now protected
		-Touch.getCurrentPoint(), similar to getLastPoint except gets the current point

	Bug Fixes:
		-push/pop style for every zone draw properly (no longer inherit style from parent zones)
		-push/pop style in touch methods properly
		-Try to do proper shutdown in TouchClient
		-set Zone.parent to null in TouchClient.add() to make sure we draw the Zone at the top level unless it gets a new parent set